# imprompt

./: .gitignore  GUIA-DE-CONSTRUCAO.md  LICENSE  PROMPTS-CLAUDE-CODE.md  README.md  index.html  loader.html  package-lock.json  package.json  popup.html  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: UPDATER.md
docs/design/plans/: 2026-06-23-i18n.md
docs/design/specs/: 2026-06-23-i18n-design.md
docs/superpowers/plans/: 2026-06-23-i18n.md
docs/superpowers/specs/: 2026-06-22-api-section-design.md  2026-06-23-popup-redesign.md
src/: ApiProviderIcon.tsx  App.tsx  BrandMark.tsx  ConnectionStatus.tsx  HandHeartIcon.tsx  autoscroll.ts  fonts.ts  main.tsx  noContextMenu.ts  popup.tsx  presetColor.ts  styles.css  styles.redesign-shell.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_engine.rs  clipboard.rs  commands.rs  engine.rs  hotkey.rs  i18n.rs  lib.rs  main.rs  presets.rs  secrets.rs  settings.rs  usage.rs
src/i18n/: Trans.tsx  catalog.parity.test.ts  catalog.ts  index.ts  useT.ts
src/tabs/: GatilhoTab.tsx  GeralTab.tsx  HistoricoTab.tsx  InicioTab.tsx  MotorTab.tsx  PresetsTab.tsx
